# CS120-FinalProject

./: CMakeLists.txt  FireType.cpp  FireType.h  GrassType.cpp  GrassType.h  Pokeball.cpp  Pokeball.h  Pokemon.cpp  Pokemon.h  Trainer.cpp  Trainer.h  WaterType.cpp  WaterType.h  firePokemon.txt  graphPercentages.py  grassPokemon.txt  main.cpp  pokemonScraper.py  testing.cpp  waterPokemon.txt
